tests/compile_error/enum.rs
use getset2::Getter;

#[derive(Getter)]
pub enum Enum {
    Foo,
    Bar,
}

fn main() {}
